--- a/TiendaBicicletas.csproj
+++ b/TiendaBicicletas.csproj
@@ -8,4 +8,13 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySqlConnector" Version="2.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="database\dao\" />
+    <Folder Include="viewmodel\" />
+  </ItemGroup>
+
 </Project>
