--- a/TiendaBicicletas.csproj
+++ b/TiendaBicicletas.csproj
@@ -9,11 +9,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="resource\login_bg.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
     <PackageReference Include="MySqlConnector" Version="2.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="viewmodel\" />
+    <Folder Include="src\viewmodel\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="resource\login_bg.png" />
   </ItemGroup>
 
 </Project>
